[gd_scene load_steps=3 format=3 uid="uid://be7vsd5usj6cp"]

[ext_resource type="Script" path="res://hud.gd" id="1_bpdcc"]
[ext_resource type="FontFile" uid="uid://dd3e6okfrir4v" path="res://fonts/Xolonium-Regular.ttf" id="1_mwguo"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bpdcc")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 45.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 25
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 25
text = "High Score: 0"

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 111.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="SubmitButton" type="Button" parent="."]
visible = false
offset_left = 152.0
offset_top = 512.0
offset_right = 352.0
offset_bottom = 569.0
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 45
text = "Submit"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="SubmitMessage" type="Label" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 64
text = "Submit High Score
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="."]
visible = false
offset_left = 152.0
offset_top = 584.0
offset_right = 352.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("1_mwguo")
theme_override_font_sizes/font_size = 45
text = "Restart"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
